package Usuario;

public class Empleado extends Usuario{

    public Empleado(String nombre, String contraseña, String[] permisos){
        super(nombre, contraseña);
    }

}
