@startuml GestorDeVentas

class GestorDeVentas{
    - usuarioActual : String[]
    - carrito : Carrito;

    + RegistrarUsuario() : void
    + Login() : boolean
    - UsuarioExiste() : boolean
    + listarUsuarios() : void
    + listarRegistros() : void
    + EncontrarUsuario() : Usuario
    + EncontrarCuenta() : CuentaBancaria
}

class Usuario{
    - nombre : String
    - contraseña : String

    + Usuario()

}

class Empleado{

    + Empleado()
}

class Cliente{
    - cuenta : CuentaBancaria

    + Cliente()
}

class CuentaBancaria{
    - propietario : String
    - balance : double

    + CuentaBancaria()
    + AñadirSaldo() : void
    + SustraerSaldo() : void
}

class CuentaMLC {
    
    + CuentaMLC()
    + ConvertirAcup() : double
    + ConvertirAmlc() : double
    + AñadirSaldo() : void
    + SustraerSaldo() : void

}

class Carrito{
    - listaArticulos : ArrayList

    + AñadirArticulo() : void
    + CrearCompra() : void
    + EncontrarArticulo() : Articulo
    + ArticuloExiste : boolean
    + listarArticulos : void
}

class Almacen {
    - listaArticulos : ArrayList

    + Almacen()
    + RegistrarArticulo() : void
    + listarArticulos() : void
    + EncontrarArticulo() : Articulo
    - ArticuloExiste() : boolean 
}

class Archivos {
    + GuardarDatos() : void
    + leerDatosCuenta() : ArrayList
    + leerDatosRegistro() : ArrayList
    + leerDatosUsuario() : ArrayList
    + leerDatosArticulo() : ArrayList
}

class Compra {
    - articulosComprados : ArrayList
    - comprador : Cliente
    - costoTotal : double

    + Compra()
    + ProcesarCompra() : void
    - CompraViable : boolean
    - SustraerArticulos() : void

}

class Registro{
    - fecha : String

    + Registro()
}

class Articulo{
    - nombre : String
    - descripcion : String
    - id : int
    - precio : double
    - cantidadEnAlmacen : int

    + Articulo()
    }

class Calzado{
    - talla : String

    + Calzado()
}

GestorDeVentas "1" *-- "1" Almacen
Almacen <|--- Carrito
Almacen "1" *-- "*" Articulo
Articulo <|--- Calzado
GestorDeVentas "1" *-- "*" Usuario
Usuario <|--- Cliente
Usuario <|--- Empleado
GestorDeVentas "1" *-- "*" Compra
Compra <|--- Registro
Usuario "1" *-- "1" CuentaBancaria
CuentaBancaria <|--- CuentaMLC
GestorDeVentas "1" *-- "1" Archivos
@enduml